--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-langchain==0.0.154
+langchain
 PyPDF2==3.0.1
 python-dotenv==1.0.0
-streamlit==1.18.1
+streamlit
 faiss-cpu==1.7.4
 streamlit-extras
 altair==4.0
 tiktoken
 openai
+pandas
+PyMuPDF
 
 #-e .
