--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-langchain
+langchain==0.1.0
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 streamlit
@@ -6,11 +6,12 @@ faiss-cpu==1.7.4
 streamlit-extras
 altair==4.0
 tiktoken
-openai==0.28
 pandas
 PyMuPDF
 chromadb
 pysqlite3-binary
 pypdf
-langchain_experimental
+langchain_experimental==0.0.49
+openai==0.28
+
 #-e .
